# holochain-challenge-3

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
dnas/blog/workdir/: dna.yaml
dnas/blog/zomes/coordinator/blog/: Cargo.toml
dnas/blog/zomes/coordinator/blog/src/: all_posts.rs  comment.rs  lib.rs  post.rs
dnas/blog/zomes/integrity/blog/: Cargo.toml
dnas/blog/zomes/integrity/blog/src/: comment.rs  lib.rs  post.rs
tests/: package.json
tests/src/blog/blog/: all-posts.test.ts  comment.test.ts  common.ts  post.test.ts
tests/src/blog/practice/: barebones.test.ts
ui/: index.html
ui/src/: App.svelte  Banner.svelte  app.css
ui/src/blog/blog/: AllPosts.svelte  CommentDetail.svelte  CommentsForPost.svelte  CreateComment.svelte  CreatePost.svelte  EditComment.svelte  EditPost.svelte  PostDetail.svelte  styles.css  types.ts
workdir/: happ.yaml  web-happ.yaml
