[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.4.1-rc.1"
hdk = "=0.3.1-rc.1"
serde = "1.0"

[workspace.dependencies.blog]
path = "dnas/blog/zomes/coordinator/blog"

[workspace.dependencies.blog_integrity]
path = "dnas/blog/zomes/integrity/blog"
